[package]
name = "nthash-bias"
version = "0.1.0"
edition = "2024"
default-run = "bias"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
needletail = "0.7"
rayon = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-minimizers = "2.3"

[profile.release]
opt-level = 3
lto = "thin"
