[package]
name = "nthash-bias"
version = "0.1.0"
edition = "2024"
default-run = "bias"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
needletail = "0.7"
nthash = "0.5"
nthash-rs = "0.1"
rapidhash = "4.4"
rayon = "1"
rustc-hash = "2.1"
seq-hash = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
